--- a/plottingfluxes.ipynb
+++ b/plottingfluxes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "e2ac15bf-4674-4810-aa41-c083eda2e3aa",
    "metadata": {},
    "outputs": [],
@@ -46,6 +46,10 @@
    "execution_count": 4,
    "id": "bf2d9167-66af-49cd-af8d-83cc2dbd8368",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -80,16 +84,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8c845d62-d9a5-4b50-95ee-dee0f66efb1a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#v.main"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "c61468ce-ed44-451d-911b-8b08aced1912",
    "metadata": {},
    "outputs": [],
@@ -103,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "fc08f627-f5eb-4ce2-8f0c-138c1125e9f8",
    "metadata": {
     "tags": []
@@ -180,39 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "da790750-33f7-4fc3-91c8-740aec926811",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#for i in range(0,5):\n",
-    "#    plotone(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6fed4339-ef77-44a7-9f47-2d3735db69b7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "22db98d3-8828-4884-a358-405c92d8f0b4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#galindices=np.array([4, 7, 30, 137, 557, 727, 827, 1060, 1390, 2579, 4321],'i')\n",
-    "#np.array([4,7,30,137,557,827,1060,1390,2579,4321,736,6000,223,917,1379,5298,1123,2563,50,60,70,398,9,87,200],'i')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "id": "8e318e40-f6ac-4915-aaeb-c1a38b1591c1",
    "metadata": {},
    "outputs": [],
@@ -223,39 +185,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "id": "c32999e0-6f42-4a46-b534-7cc86a3e6b41",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  1,   2,   3,   4,   5,   6,   7,   8,   9,  10,  11,  12,  13,\n",
-       "        14,  15,  16,  17,  18,  19,  20,  21,  22,  23,  24,  25,  26,\n",
-       "        27,  28,  29,  30,  31,  32,  33,  34,  35,  36,  37,  38,  39,\n",
-       "        40,  41,  42,  43,  44,  45,  46,  47,  48,  49,  50,  51,  52,\n",
-       "        53,  54,  55,  56,  57,  58,  59,  60,  61,  62,  63,  64,  65,\n",
-       "        66,  67,  68,  69,  70,  71,  72,  73,  74,  75,  76,  77,  78,\n",
-       "        79,  80,  81,  82,  83,  84,  85,  86,  87,  88,  89,  90,  91,\n",
-       "        92,  93,  94,  95,  96,  97,  98,  99, 100, 101, 102, 103, 104,\n",
-       "       105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117,\n",
-       "       118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130,\n",
-       "       131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143,\n",
-       "       144, 145, 146, 147, 148, 149, 150])"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "galindices"
+    "#galindices"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "id": "a7bbc925-1b90-4271-b972-a7d2612a4420",
    "metadata": {},
    "outputs": [],
@@ -266,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 10,
    "id": "5ac7d383-1fc7-43f9-8e5d-34af06ff5175",
    "metadata": {},
    "outputs": [],
@@ -277,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
    "id": "5b4437dc-331b-49e3-bbe9-1a0158e81796",
    "metadata": {},
    "outputs": [],
@@ -289,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "id": "f5f0f003-4b9f-4b1e-bb85-83bcf0f96c8f",
    "metadata": {},
    "outputs": [],
@@ -299,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "id": "e6db521a-7acf-4e26-a3b8-de021b2e2408",
    "metadata": {},
    "outputs": [],
@@ -309,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 14,
    "id": "6270c50f-f80f-49b5-b328-84895fc77646",
    "metadata": {},
    "outputs": [],
@@ -319,15 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "eacf47be-8924-46ec-8f58-45452c68605f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 16,
    "id": "e65bf0f9-5054-4630-b692-b4ffacada211",
    "metadata": {},
    "outputs": [],
@@ -335,23 +267,13 @@
     "nums = final_table['VFID']\n",
     "newcolumn=[]\n",
     "for i in range(len(nums)):\n",
-    "    newnum = int(test[i].split('VFID')[1])\n",
+    "    newnum = int(nums[i].split('VFID')[1])\n",
     "    newcolumn.append(newnum)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
-   "id": "831559bf-c579-4d23-b632-e4d98f8874b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#newcolumn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 18,
    "id": "bb60ce6f-b9b3-44ec-b21c-e7bb6d96d0cc",
    "metadata": {},
    "outputs": [],
@@ -361,15 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b98b6422-3a50-4f1a-a4ae-6e54ccd44e86",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 19,
    "id": "9c539b36-33d0-431e-9c94-334d4ac8e640",
    "metadata": {},
    "outputs": [
@@ -377,7 +291,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=150</i>\n",
-       "<table id=\"table140372298776144\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140263678429024\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>VFID</th><th>prefix</th><th>RA</th><th>DEC</th><th>vr</th><th>FLUX_AP06_FUV</th><th>FLUX_AP06_NUV</th><th>FLUX_AP06_G</th><th>FLUX_AP06_R</th><th>FLUX_AP06_Z</th><th>FLUX_AP06_W1</th><th>FLUX_AP06_W2</th><th>FLUX_AP06_W3</th><th>FLUX_AP06_W4</th><th>FLUX_IVAR_AP06_FUV</th><th>FLUX_IVAR_AP06_NUV</th><th>FLUX_IVAR_AP06_G</th><th>FLUX_IVAR_AP06_R</th><th>FLUX_IVAR_AP06_Z</th><th>FLUX_IVAR_AP06_W1</th><th>FLUX_IVAR_AP06_W2</th><th>FLUX_IVAR_AP06_W3</th><th>FLUX_IVAR_AP06_W4</th><th>logMstar</th><th>logSFR</th><th>logmass</th><th>logsfr</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>log(solMass)</th><th>log(solMass/yr)</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>bytes36</th><th>float64</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
@@ -417,7 +331,7 @@
        "  150 VFID0150-SDSSJ094515.30+692325.9 ...           --              --"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,13 +352,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 20,
    "id": "670a5381-b85e-4ffa-8f81-40f4647edb5f",
    "metadata": {},
    "outputs": [],
    "source": [
     "final_table.write('sedsphot3.csv',format='csv',overwrite=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7df5abb7-a6cc-40f6-8de2-f343f5ae29e7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c2266f3-2fa7-43de-aa37-33c253b48814",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78468469-50a5-4a9a-9777-6fff5c9c2815",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce5ff7ec-e352-439c-96c1-9a75971983d9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd7f0ccc-76da-418c-87fb-92cea901db91",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
