150 to 160 galaxy count change

--- a/plottingfluxes.ipynb
+++ b/plottingfluxes.ipynb
@@ -174,13 +174,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "8e318e40-f6ac-4915-aaeb-c1a38b1591c1",
    "metadata": {},
    "outputs": [],
    "source": [
     "#galindices=np.array([4, 7, 30, 137, 557, 727, 827, 1060, 1390, 2579, 4321, 6069, 5286, 5583, 6449, 303, 2767, 3007, 2404, 3079, 3140, 1731],'i')\n",
-    "galindices=np.array(np.arange(1,151,1))"
+    "galindices=np.array(np.arange(1,161,1))"
    ]
   },
   {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "5ac7d383-1fc7-43f9-8e5d-34af06ff5175",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "5b4437dc-331b-49e3-bbe9-1a0158e81796",
    "metadata": {},
    "outputs": [],
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "f5f0f003-4b9f-4b1e-bb85-83bcf0f96c8f",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "e6db521a-7acf-4e26-a3b8-de021b2e2408",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "id": "6270c50f-f80f-49b5-b328-84895fc77646",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "id": "e65bf0f9-5054-4630-b692-b4ffacada211",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "id": "bb60ce6f-b9b3-44ec-b21c-e7bb6d96d0cc",
    "metadata": {},
    "outputs": [],
@@ -283,15 +283,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "9c539b36-33d0-431e-9c94-334d4ac8e640",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div><i>Table length=150</i>\n",
-       "<table id=\"table140263678429024\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<div><i>Table length=160</i>\n",
+       "<table id=\"table140263709476896\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>VFID</th><th>prefix</th><th>RA</th><th>DEC</th><th>vr</th><th>FLUX_AP06_FUV</th><th>FLUX_AP06_NUV</th><th>FLUX_AP06_G</th><th>FLUX_AP06_R</th><th>FLUX_AP06_Z</th><th>FLUX_AP06_W1</th><th>FLUX_AP06_W2</th><th>FLUX_AP06_W3</th><th>FLUX_AP06_W4</th><th>FLUX_IVAR_AP06_FUV</th><th>FLUX_IVAR_AP06_NUV</th><th>FLUX_IVAR_AP06_G</th><th>FLUX_IVAR_AP06_R</th><th>FLUX_IVAR_AP06_Z</th><th>FLUX_IVAR_AP06_W1</th><th>FLUX_IVAR_AP06_W2</th><th>FLUX_IVAR_AP06_W3</th><th>FLUX_IVAR_AP06_W4</th><th>logMstar</th><th>logSFR</th><th>logmass</th><th>logsfr</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>log(solMass)</th><th>log(solMass/yr)</th></tr></thead>\n",
        "<thead><tr><th>int64</th><th>bytes36</th><th>float64</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
@@ -302,36 +302,36 @@
        "<tr><td>5</td><td>VFID0005-NGC3752</td><td>173.1341835</td><td>74.6275401</td><td>1920.1</td><td>210.4639</td><td>322.33075</td><td>3742.9502</td><td>6841.195</td><td>8911.681</td><td>6501.1787</td><td>3806.7498</td><td>14491.306</td><td>19376.543</td><td>0.013649784</td><td>0.023729451</td><td>0.3713029</td><td>0.11871743</td><td>0.026629793</td><td>0.034615573</td><td>0.011559058</td><td>7.032565e-05</td><td>2.2361517e-06</td><td>9.673020907128896</td><td>-0.8285660990569917</td><td>9.76</td><td>-0.55</td></tr>\n",
        "<tr><td>6</td><td>VFID0006-UGC04202</td><td>121.912404</td><td>74.5846308</td><td>2333.0</td><td>0.0</td><td>0.0</td><td>436.03336</td><td>773.5397</td><td>926.1702</td><td>680.75714</td><td>337.89648</td><td>707.99805</td><td>944.4854</td><td>0.0</td><td>0.0</td><td>0.50576097</td><td>0.15267426</td><td>0.034080274</td><td>0.10524834</td><td>0.027378503</td><td>8.2842605e-05</td><td>3.3551603e-06</td><td>8.789792167730676</td><td>-2.712198270069774</td><td>8.98</td><td>-1.69</td></tr>\n",
        "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
-       "<tr><td>145</td><td>VFID0145-NGC4120</td><td>182.129217</td><td>69.5448873</td><td>2246.3</td><td>0.0</td><td>0.0</td><td>2771.0388</td><td>4497.998</td><td>5278.1733</td><td>3531.6904</td><td>2039.92</td><td>6267.987</td><td>11243.765</td><td>0.0</td><td>0.0</td><td>0.26005608</td><td>0.06475455</td><td>0.021323033</td><td>0.037324626</td><td>0.010566256</td><td>4.3550583e-05</td><td>1.7154838e-06</td><td>9.486855355276944</td><td>-0.7185121120599187</td><td>9.18</td><td>-1.04</td></tr>\n",
-       "<tr><td>146</td><td>VFID0146-KAZ186</td><td>272.037708</td><td>69.5023333</td><td>1618.0</td><td>10.908042</td><td>20.694904</td><td>204.33623</td><td>366.2483</td><td>563.49994</td><td>462.42334</td><td>299.8381</td><td>950.85657</td><td>1014.22534</td><td>0.19555447</td><td>0.29782903</td><td>4.344014</td><td>2.5373604</td><td>0.3213255</td><td>0.7703945</td><td>0.33820617</td><td>0.0065034856</td><td>0.0002538828</td><td>8.436321700139734</td><td>-1.889747082646597</td><td>--</td><td>--</td></tr>\n",
-       "<tr><td>147</td><td>VFID0147-UGC04739</td><td>135.951666</td><td>69.4871667</td><td>2200.0</td><td>77.90854</td><td>134.34535</td><td>994.9757</td><td>1593.2784</td><td>1942.2</td><td>1205.1151</td><td>716.6556</td><td>2673.3691</td><td>5398.7026</td><td>0.16785447</td><td>2.272722</td><td>5.3885245</td><td>1.6383293</td><td>0.2245995</td><td>0.24689071</td><td>0.093808554</td><td>0.00042525507</td><td>1.7173732e-05</td><td>9.063708559391417</td><td>-0.7988761027926204</td><td>9.0</td><td>-0.92</td></tr>\n",
-       "<tr><td>148</td><td>VFID0148-UGC10736</td><td>257.019447</td><td>69.464317</td><td>490.70001220703125</td><td>217.54056</td><td>380.85977</td><td>22689.107</td><td>25711.422</td><td>351.0048</td><td>2543.7715</td><td>1040.1028</td><td>3016.0527</td><td>3746.7883</td><td>0.13292028</td><td>0.17955764</td><td>0.21986155</td><td>0.04904069</td><td>0.008654647</td><td>0.024767486</td><td>0.008806854</td><td>8.949236e-05</td><td>3.4675957e-06</td><td>7.924795995797912</td><td>-3.0517827064400294</td><td>9.13</td><td>-1.48</td></tr>\n",
-       "<tr><td>149</td><td>VFID0149-NGC3654</td><td>171.044667</td><td>69.4130833</td><td>1573.3</td><td>347.27243</td><td>516.9693</td><td>4223.5264</td><td>7265.3433</td><td>8215.322</td><td>5599.65</td><td>3254.4634</td><td>13066.486</td><td>20522.875</td><td>0.008704062</td><td>0.014503268</td><td>0.44943947</td><td>0.1790493</td><td>0.053511925</td><td>0.05122132</td><td>0.019978538</td><td>9.22163e-05</td><td>3.6842005e-06</td><td>9.523356206654793</td><td>-0.8735438865681957</td><td>9.63</td><td>-0.51</td></tr>\n",
-       "<tr><td>150</td><td>VFID0150-SDSSJ094515.30+692325.9</td><td>146.31578100000002</td><td>69.3902517</td><td>570.6</td><td>3.0334244</td><td>5.066604</td><td>31.243603</td><td>45.844536</td><td>15.1263075</td><td>11.739108</td><td>9.781701</td><td>-136.71095</td><td>-321.17114</td><td>0.3625989</td><td>23.640541</td><td>4.2102327</td><td>1.5568718</td><td>0.43626252</td><td>1.0861381</td><td>0.25344965</td><td>0.00067077554</td><td>2.7422131e-05</td><td>5.835880731817395</td><td>-4.327809748811747</td><td>--</td><td>--</td></tr>\n",
+       "<tr><td>155</td><td>VFID0155-NGC2787</td><td>139.826811</td><td>69.2033065</td><td>696.8</td><td>37.195934</td><td>149.57419</td><td>32674.107</td><td>72582.99</td><td>112756.84</td><td>67095.29</td><td>35422.777</td><td>19958.701</td><td>12421.762</td><td>0.033915553</td><td>0.048665494</td><td>0.25008842</td><td>0.064618096</td><td>0.021090822</td><td>0.006736028</td><td>0.004314761</td><td>4.3127777e-05</td><td>1.7518562e-06</td><td>9.993788813818705</td><td>-3.3064489144040863</td><td>9.88</td><td>-2.22</td></tr>\n",
+       "<tr><td>156</td><td>VFID0156-WISEAJ101952.44+691119.7</td><td>154.97050199999998</td><td>69.1885825</td><td>557.0</td><td>10.389812</td><td>7.0715103</td><td>62.536404</td><td>101.70267</td><td>48.815807</td><td>110.58452</td><td>56.96827</td><td>571.2327</td><td>447.00336</td><td>0.05725084</td><td>0.07499606</td><td>0.8289712</td><td>0.19257212</td><td>0.04071993</td><td>0.11862364</td><td>0.028350813</td><td>0.00015274138</td><td>4.8653565e-06</td><td>6.80543288813214</td><td>-3.444301105281099</td><td>--</td><td>--</td></tr>\n",
+       "<tr><td>157</td><td>VFID0157-UGC06764</td><td>176.91858000000002</td><td>69.1040866</td><td>1460.2</td><td>25.84888</td><td>89.54543</td><td>624.9289</td><td>905.46735</td><td>722.4478</td><td>542.7106</td><td>225.16042</td><td>177.51395</td><td>201.49983</td><td>0.11991391</td><td>0.21979164</td><td>0.89385664</td><td>0.09715551</td><td>0.036644123</td><td>0.1335574</td><td>0.034570035</td><td>0.00014369507</td><td>5.4537045e-06</td><td>8.286007122079475</td><td>-2.188961491395784</td><td>--</td><td>--</td></tr>\n",
+       "<tr><td>158</td><td>VFID0158-UGCA362</td><td>203.274417</td><td>68.8603333</td><td>1500.0</td><td>103.53413</td><td>126.76539</td><td>468.19226</td><td>689.3197</td><td>791.95966</td><td>412.93143</td><td>232.64096</td><td>637.99646</td><td>1702.8796</td><td>0.03485017</td><td>0.07350395</td><td>4.782844</td><td>1.4353107</td><td>0.32270852</td><td>0.6247688</td><td>0.21404143</td><td>0.0009818695</td><td>3.81101e-05</td><td>7.941561120236071</td><td>-1.484788695672198</td><td>--</td><td>--</td></tr>\n",
+       "<tr><td>159</td><td>VFID0159-UGC05765</td><td>159.37044300000002</td><td>68.8194989</td><td>1824.1</td><td>87.38367</td><td>202.01826</td><td>1494.851</td><td>2303.258</td><td>2543.6335</td><td>1641.3491</td><td>914.1816</td><td>1537.2684</td><td>2270.3367</td><td>0.042684596</td><td>0.06723315</td><td>0.23679547</td><td>0.070290945</td><td>0.011894557</td><td>0.04231588</td><td>0.010604856</td><td>3.743832e-05</td><td>1.4978427e-06</td><td>9.012415374762433</td><td>-0.5867002359187481</td><td>9.16</td><td>-0.96</td></tr>\n",
+       "<tr><td>160</td><td>VFID0160-NGC4128</td><td>182.134791</td><td>68.7676111</td><td>2336.6</td><td>22.358511</td><td>93.365456</td><td>13270.187</td><td>24028.605</td><td>31997.611</td><td>23712.793</td><td>12318.874</td><td>4016.184</td><td>2515.8562</td><td>0.045068763</td><td>0.08773991</td><td>0.44391313</td><td>0.11275846</td><td>0.029183356</td><td>0.018548071</td><td>0.011118901</td><td>9.759782e-05</td><td>3.8463486e-06</td><td>10.574956775764507</td><td>-3.6318991482906484</td><td>10.57</td><td>-1.35</td></tr>\n",
        "</table></div>"
       ],
       "text/plain": [
-       "<Table length=150>\n",
-       " VFID              prefix              ...   logmass         logsfr    \n",
-       "                                       ... log(solMass) log(solMass/yr)\n",
-       "int64             bytes36              ...   float64        float64    \n",
-       "----- -------------------------------- ... ------------ ---------------\n",
-       "    1                 VFID0001-NGC4133 ...         9.79            0.13\n",
-       "    2                 VFID0002-NGC2977 ...        10.35            0.34\n",
-       "    3             VFID0003-CGCG352-030 ...         9.58           -2.35\n",
-       "    4                VFID0004-UGC07189 ...         9.54           -1.14\n",
-       "    5                 VFID0005-NGC3752 ...         9.76           -0.55\n",
-       "    6                VFID0006-UGC04202 ...         8.98           -1.69\n",
-       "  ...                              ... ...          ...             ...\n",
-       "  145                 VFID0145-NGC4120 ...         9.18           -1.04\n",
-       "  146                  VFID0146-KAZ186 ...           --              --\n",
-       "  147                VFID0147-UGC04739 ...          9.0           -0.92\n",
-       "  148                VFID0148-UGC10736 ...         9.13           -1.48\n",
-       "  149                 VFID0149-NGC3654 ...         9.63           -0.51\n",
-       "  150 VFID0150-SDSSJ094515.30+692325.9 ...           --              --"
+       "<Table length=160>\n",
+       " VFID               prefix              ...   logmass         logsfr    \n",
+       "                                        ... log(solMass) log(solMass/yr)\n",
+       "int64              bytes36              ...   float64        float64    \n",
+       "----- --------------------------------- ... ------------ ---------------\n",
+       "    1                  VFID0001-NGC4133 ...         9.79            0.13\n",
+       "    2                  VFID0002-NGC2977 ...        10.35            0.34\n",
+       "    3              VFID0003-CGCG352-030 ...         9.58           -2.35\n",
+       "    4                 VFID0004-UGC07189 ...         9.54           -1.14\n",
+       "    5                  VFID0005-NGC3752 ...         9.76           -0.55\n",
+       "    6                 VFID0006-UGC04202 ...         8.98           -1.69\n",
+       "  ...                               ... ...          ...             ...\n",
+       "  155                  VFID0155-NGC2787 ...         9.88           -2.22\n",
+       "  156 VFID0156-WISEAJ101952.44+691119.7 ...           --              --\n",
+       "  157                 VFID0157-UGC06764 ...           --              --\n",
+       "  158                  VFID0158-UGCA362 ...           --              --\n",
+       "  159                 VFID0159-UGC05765 ...         9.16           -0.96\n",
+       "  160                  VFID0160-NGC4128 ...        10.57           -1.35"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,17 +342,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "id": "f7560384-0556-4fc6-a099-f66edcf6e381",
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_table.write('sedsphot3.fits',format='fits',overwrite=True)"
+    "#final_table.write('sedsphot3.fits',format='fits',overwrite=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "id": "670a5381-b85e-4ffa-8f81-40f4647edb5f",
    "metadata": {},
    "outputs": [],
