--- a/plottingfluxes.ipynb
+++ b/plottingfluxes.ipynb
@@ -33,6 +33,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "19ad0644-baab-412c-9aa3-e0b6a77ff00b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cwd2 = homedir+'/Desktop/SummerResearch2023/'"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "eec4cbef-809d-4a8f-9a47-28b34a0c3e70",
    "metadata": {},
@@ -352,21 +362,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 34,
    "id": "670a5381-b85e-4ffa-8f81-40f4647edb5f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_table.write('sedsphot3.csv',format='csv',overwrite=True)"
+    "final_table.write('sedsphot.csv',format='csv',overwrite=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
+   "id": "cd11901d-ecc8-4e0a-87fa-bbcca10a181c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(cwd2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "7df5abb7-a6cc-40f6-8de2-f343f5ae29e7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "final_table.write('sedsphot.csv',format='csv',overwrite=True)"
+   ]
   },
   {
    "cell_type": "code",
